[gd_scene load_steps=21 format=3 uid="uid://ccdc33vpni5bd"]

[ext_resource type="Script" uid="uid://dj4hr00xw01je" path="res://Scripts/player.gd" id="1_4flbx"]
[ext_resource type="Texture2D" uid="uid://ctkm7nmrthopo" path="res://Textures/pentagon.png" id="2_onrkg"]
[ext_resource type="AudioStream" uid="uid://cnq7ivmp32tgp" path="res://Audio/SoundFX/jump.mp3" id="2_sweqy"]
[ext_resource type="AudioStream" uid="uid://d4k5qwdw5ufjn" path="res://Audio/SoundFX/ball_impact.mp3" id="3_2hs0m"]
[ext_resource type="AudioStream" uid="uid://bdsmrl04kpxbj" path="res://Audio/SoundFX/ball_roll.mp3" id="3_i3pqv"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_4flbx"]
friction = 500.0
rough = true
bounce = 0.3

[sub_resource type="Gradient" id="Gradient_4flbx"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_onrkg"]
gradient = SubResource("Gradient_4flbx")
fill_from = Vector2(0, 0.5)
fill_to = Vector2(0, 1)
repeat = 2

[sub_resource type="FastNoiseLite" id="FastNoiseLite_onrkg"]
frequency = 0.004

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_i3pqv"]
invert = true
seamless = true
noise = SubResource("FastNoiseLite_onrkg")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4flbx"]
resource_local_to_scene = true
transparency = 1
albedo_color = Color(0.763635, 0.263049, 1, 0.619608)
metallic = 1.0
roughness_texture = SubResource("NoiseTexture2D_i3pqv")
emission = Color(1, 0, 0.701961, 1)
emission_operator = 1
emission_texture = SubResource("GradientTexture2D_onrkg")
rim_enabled = true
rim_tint = 1.0
backlight = Color(1, 1, 1, 1)
grow = true

[sub_resource type="SphereMesh" id="SphereMesh_sh265"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_4flbx")
radial_segments = 32
rings = 16

[sub_resource type="ViewportTexture" id="ViewportTexture_i3pqv"]
viewport_path = NodePath("MeshInstance3D/Reflection_Mesh/SubViewport")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_4flbx"]
frequency = 0.0009

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_onrkg"]
in_3d_space = true
seamless = true
as_normal_map = true
bump_strength = 2.0
noise = SubResource("FastNoiseLite_4flbx")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hqtel"]
resource_local_to_scene = true
albedo_color = Color(1, 1, 1, 0.619608)
albedo_texture = SubResource("ViewportTexture_i3pqv")
roughness = 0.0
normal_enabled = true
normal_scale = 16.0
normal_texture = SubResource("NoiseTexture2D_onrkg")
uv1_offset = Vector3(0.5, 0, 0)
billboard_mode = 1

[sub_resource type="SphereMesh" id="SphereMesh_sweqy"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_hqtel")
radius = 0.48
height = 0.92
radial_segments = 32
rings = 16

[sub_resource type="Environment" id="Environment_4flbx"]

[sub_resource type="SphereShape3D" id="SphereShape3D_4flbx"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_4flbx"]
dof_blur_far_distance = 1.16

[node name="Player" type="RigidBody3D" groups=["player"]]
collision_layer = 5
collision_mask = 5
physics_material_override = SubResource("PhysicsMaterial_4flbx")
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_4flbx")
jump_sfx = ExtResource("2_sweqy")
impact_sfx = ExtResource("3_2hs0m")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_sh265")

[node name="Reflection_Mesh" type="MeshInstance3D" parent="MeshInstance3D"]
mesh = SubResource("SphereMesh_sweqy")
skeleton = NodePath("../..")

[node name="SubViewport" type="SubViewport" parent="MeshInstance3D/Reflection_Mesh"]
render_target_update_mode = 4

[node name="reflection_cam" type="Camera3D" parent="MeshInstance3D/Reflection_Mesh/SubViewport"]
cull_mask = 1048561
environment = SubResource("Environment_4flbx")
fov = 37.5

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_4flbx")

[node name="CameraTarget" type="Marker3D" parent="."]

[node name="SpringArm3D" type="SpringArm3D" parent="CameraTarget"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
spring_length = 3.0

[node name="Camera3D" type="Camera3D" parent="CameraTarget/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 0.946812, 0.321787, 0, -0.321787, 0.946812, 0, 1.88998, 2.78866)
cull_mask = 1048565
attributes = SubResource("CameraAttributesPractical_4flbx")

[node name="FloorCheck" type="RayCast3D" parent="."]
target_position = Vector3(0, -0.62, 0)

[node name="map_marker" type="Sprite3D" parent="."]
layers = 2
modulate = Color(0, 1, 0, 1)
pixel_size = 0.02
billboard = 1
no_depth_test = true
render_priority = 127
texture = ExtResource("2_onrkg")

[node name="sfx_stream" type="AudioStreamPlayer3D" parent="."]
volume_db = -20.0

[node name="sfx_roll_stream" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_i3pqv")
volume_db = -20.0
autoplay = true
parameters/looping = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
